@@ -1,3 +1,14 @@
+2006-11-06  Mark Rowe  <bdash@webkit.org>
+
+        Reviewed by the wonderful Mitz Pettel.
+
+        Test for http://bugs.webkit.org/show_bug.cgi?id=11524
+        Bug 11524: REGRESSION(r9842): Array.prototype.join should use ToString operator rather than calling toString on each element
+
+        * fast/js/array-join-bug-11524-expected.txt: Added.
+        * fast/js/array-join-bug-11524.html: Added.
+        * fast/js/resources/array-join-bug-11524.js: Added.
+
 2006-11-04  Alexey Proskuryakov  <ap@nypop.com>
 
         Reviewed by Maciej.
